# stackback

./: README.md  pyproject.toml
stackback/: __init__.py  llm.py  main.py  parser.py  tui.py
tests/: test_llm.py  test_parser.py
