[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "stackback"
version = "0.0.1"
description = "AI-powered terminal error fixer inspired by thefuck and rebound"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "prompt-toolkit>=3",
    "openai>=1",
    "anthropic>=0.25",
    "google-generativeai>=0.7",
    "requests>=2.31",
]

[project.scripts]
sb = "stackback.main:app"
stackback = "stackback.main:app"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-mock>=3"]
