[project]
name = "stackback"
version = "0.0.4"
description = "AI-powered terminal error fixer with Stack Overflow integration"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0.0",
    "typer>=0.12",
    "rich>=13.0.0",
    "openai>=1.0.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
sb = "stackback.main:main"
stackback = "stackback.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]